# photon

./: .gitignore  .testr.conf  CONTRIBUTING.rst  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
asset/: photon.xcf
doc/source/: conf.py  config.rst  index.rst  provisioner.rst
examples/: photon.yml
photon/: __init__.py  ansible_playbook.py  config.py  provisioner.py  shell.py
tests/: conftest.py  helper.py  test_ansible_playbook.py  test_config.py  test_provisioner.py
