[metadata]
name = photon
summary = photon - A data driven tool to deploy fusion
description-file =
    README.rst
author = John Dewey
author-email = jodewey@cisco.com
home-page = https://github.com/metacloud/photon
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[entry_points]
console_scripts =
    photon = photon.shell:main

[files]
packages =
    photon

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
